# curve25519-scalarmult-neon

./: .gitignore  Cargo.toml  README.md  index.js  package.json  postinstall.js  release
.github/workflows/: publish-npmjs.yml  rust.yml
src/: lib.rs
test/: index.js
